style: update CNN.ipynb

--- a/spring-2022/assignments/project-2/CNN.ipynb
+++ b/spring-2022/assignments/project-2/CNN.ipynb
@@ -269,11 +269,13 @@
     "        super(AttrDict, self).__init__(*args, **kwargs)\n",
     "        self.__dict__ = self\n",
     "args = AttrDict()\n",
+    "# define other arguments if needed during training\n",
     "args_dict = {\n",
     "              'gpu':True, \n",
     "              'num_filters':64, \n",
     "              'seed':your_student_id,\n",
-    "              'category_id': 1\n",
+    "              'category_id': 1,\n",
+    "               #     ...\n",
     "}\n",
     "args.update(args_dict)\n",
     "\n",
@@ -340,11 +342,13 @@
     "        super(AttrDict, self).__init__(*args, **kwargs)\n",
     "        self.__dict__ = self\n",
     "args = AttrDict()\n",
+    "# define other arguments if needed during training\n",
     "args_dict = {\n",
     "              'gpu':True, \n",
     "              'num_filters':64, \n",
     "              'seed':your_student_id,\n",
-    "              'category_id': 1\n",
+    "              'category_id': 1,\n",
+    "               #     ...\n",
     "}\n",
     "args.update(args_dict)\n",
     "\n",
@@ -400,11 +404,13 @@
     "        super(AttrDict, self).__init__(*args, **kwargs)\n",
     "        self.__dict__ = self\n",
     "args = AttrDict()\n",
+    "# define other arguments if needed during training\n",
     "args_dict = {\n",
     "              'gpu':True, \n",
     "              'num_filters':64, \n",
     "              'seed':your_student_id,\n",
-    "              'category_id': 1\n",
+    "              'category_id': 1,\n",
+    "               #     ...\n",
     "}\n",
     "args.update(args_dict)\n",
     "\n",
