style: merge blocks of part-2

--- a/spring-2022/assignments/project-2/CNN.ipynb
+++ b/spring-2022/assignments/project-2/CNN.ipynb
@@ -74,6 +74,7 @@
    "cell_type": "markdown",
    "id": "ff6638fd-889e-4cf1-ac74-bcc9463b8907",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -99,7 +100,10 @@
   {
    "cell_type": "markdown",
    "id": "d07f1d62-58ab-4079-bddd-10d243b2f50c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Constants"
    ]
@@ -128,7 +132,10 @@
   {
    "cell_type": "markdown",
    "id": "91d9c443-7156-4f12-937b-abfd36522753",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Prepare Dataset: cifar10"
    ]
@@ -171,7 +178,10 @@
   {
    "cell_type": "markdown",
    "id": "f64da99c-20bd-4bc6-81cb-38c48cec220b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Base Model"
    ]
@@ -194,6 +204,7 @@
    "cell_type": "markdown",
    "id": "1ec0b84e-0601-4b69-8e9c-8771838e55ef",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -232,64 +243,22 @@
   {
    "cell_type": "markdown",
    "id": "cf258610-8177-4884-b0ff-0512395a50bc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Custom U-Net Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13f9ed7a-adfb-4646-b401-ca5e4e77c79a",
-   "metadata": {},
-   "source": [
-    "Complete the <code>model.py</code> to train your model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ca5e38c-ac4a-4893-a3e3-c477df1a48a9",
-   "metadata": {},
-   "source": [
-    "### Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63f54720-a76a-4f00-aedd-6d5327dc0e9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##############################################################################################\n",
-    "#                                 define some arguments if needed to pass                    #\n",
-    "##############################################################################################\n",
-    "\n",
-    "class AttrDict(dict):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super(AttrDict, self).__init__(*args, **kwargs)\n",
-    "        self.__dict__ = self\n",
-    "args = AttrDict()\n",
-    "# define other arguments if needed during training\n",
-    "args_dict = {\n",
-    "              'gpu':True, \n",
-    "              'num_filters':64, \n",
-    "              'seed':your_student_id,\n",
-    "              'category_id': 1,\n",
-    "               #     ...\n",
-    "}\n",
-    "args.update(args_dict)\n",
-    "\n",
-    "##############################################################################################\n",
-    "#                                 call the train function (train.py)                         #\n",
-    "##############################################################################################"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6fad1128-e0d0-4483-9c6a-a5e50a647f75",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "# Skip connection "
+    "**Skip connection**"
    ]
   },
   {
@@ -323,7 +292,7 @@
     "tags": []
    },
    "source": [
-    "## Training"
+    "### Training"
    ]
   },
   {
@@ -360,9 +329,12 @@
   {
    "cell_type": "markdown",
    "id": "535a2342-7a49-4ddd-9d62-9af21fbe1283",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "# Extra Points: U-Net with Residual block"
+    "## Extra Points: U-Net with Residual block"
    ]
   },
   {
@@ -385,7 +357,7 @@
     "tags": []
    },
    "source": [
-    "## Training"
+    "### Training"
    ]
   },
   {
@@ -422,7 +394,10 @@
   {
    "cell_type": "markdown",
    "id": "19cbac1d-e2df-4640-ad5a-6c15c2928e08",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Refrences"
    ]
